# Gesta_acesso_eclusa

./: .env.example  .gitignore  CHECKLIST_VALIDACAO.md  README.md  deploy.ps1  disable_windows_update.ps1  docker-compose.yml  setup_nodered.ps1  setup_windows_server_2022.ps1
.claude/: settings.local.json
eclusa-monitor/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
eclusa-monitor/Public/: mapa.html  wireframes.html
eclusa-monitor/src/: App.tsx  index.css
eclusa-monitor/src-tauri/: Cargo.toml  config.json  tauri.conf.json
eclusa-monitor/src-tauri/capabilities/: default.json
eclusa-monitor/src-tauri/src/: config.rs  lib.rs  main.rs  rdp.rs
eclusa-monitor/src/components/: Apresentacao.tsx  RedeAnalise.tsx
eclusa-monitor/src/components/_legacy/: ClientePanel.tsx  ConectarModal.tsx  EclusasBar.tsx  GerirUtilizadores.tsx
eclusa-monitor/src/components/admin/: AdminBlacklist.tsx  AdminLogs.tsx  AdminServidores.tsx  AdminSidebar.tsx  AdminUtilizadores.tsx  Pagination.tsx  TabelaAdmin.tsx
eclusa-monitor/src/components/auth/: LoginDialog.tsx  LoginPage.tsx
eclusa-monitor/src/components/eclusa/: EclusaAcessoCard.tsx  EclusaMonitorCard.tsx
eclusa-monitor/src/components/layout/: Header.tsx  StatusBar.tsx
eclusa-monitor/src/hooks/: useAuth.ts  useEstado.ts  useRdp.ts
eclusa-monitor/src/lib/: api.ts
eclusa-monitor/src/types/: index.ts
eclusa-streamer/: Cargo.toml  config_cliente1.json  config_cliente2.json
eclusa-streamer/src/: main.rs
infra/: Makefile  docker-compose.yml
infra/db/: schema.sql  seed.sql
nodered_files/: docker-compose.yml  flows.json  settings.js
wincc-agent/: Cargo.toml  install_agent.ps1  wincc_global_script.vbs
wincc-agent/src/: main.rs
wincc-api/: .env.example  Cargo.toml  Dockerfile
wincc-api/src/: auth.rs  config.rs  main.rs  middleware.rs  state.rs  types.rs
wincc-api/src/db/: audit.rs  mod.rs
wincc-api/src/failover/: mod.rs  orchestrator.rs
wincc-api/src/handlers/: eclusas.rs  misc.rs  mod.rs  plc.rs  sessions.rs  stream.rs  supervisao.rs  users.rs
wincc-api/src/plc/: connection.rs  health.rs  mod.rs
wincc-api/src/rdp/: firewall.rs  mod.rs  verify.rs
wincc-scripts/: CONFIGURAR_WINDOWS_SERVER_2022.md  configurar_shadow_rdp.ps1  eclusas_exemplo.json  escrever_eclusa_api.vbs  exportar_eclusas.vbs  finalizar_sessao.vbs  ler_json_para_tags.vbs  ler_sessoes_api.vbs  wincc_global_script.vbs
