[package]
name = "eclusa-streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
screenshots = "0.8"
mozjpeg = "0.10"
rayon   = "1"
ureq = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
