[package]
name    = "wincc-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wincc-agent"
path = "src/main.rs"

[dependencies]
ureq           = "2"
windows-service = "0.7"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

[profile.release]
opt-level = "z"
lto       = true
strip     = true
