[package]
name = "wincc-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "request-id"] }
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
windows     = { version = "0.58", features = ["Win32_System_RemoteDesktop", "Win32_Foundation"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[profile.release]
opt-level = 2
lto = false
codegen-units = 16
strip = false
